UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/UNI_NNI_SECNCI__c.field-meta.xml
<CustomField>
    <fullName>UNI_NNI_SECNCI__c</fullName>
    <label>UNI/NNI SECNCI</label>
    <length>200</length>
    <type>Text</type>
</CustomField>