UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/UNI_SPEC_Code__c.field-meta.xml
<CustomField>
    <fullName>UNI_SPEC_Code__c</fullName>
    <label>UNI SPEC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>