UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Wholesale_ACNA__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_ACNA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACNA</label>
    <referenceTo>FTRWSAcna__c</referenceTo>
    <relationshipLabel>Wholesale Service Orders</relationshipLabel>
    <relationshipName>Wholesale_Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>