UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Wholesale_ACNA__c</columns>
    <columns>PON__c</columns>
    <columns>Service_Order__c</columns>
    <columns>PRILOC_LCON__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Activity_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>