UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/listViews/WSMissingACNA_Wholesale_Service_Order.listView-meta.xml
<ListView>
    <fullName>WSMissingACNA_Wholesale_Service_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>WSMissingACNA</label>
    <queue>WSMissingACNA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>